--- a/templates/todolist/index.html
+++ b/templates/todolist/index.html
@@ -10,6 +10,7 @@
         <div class="field">
             <label>Новая задача</label>
             <input type="text" name="title" placeholder="Введи название задачи"> <br>
+            <input type="text" name="description" placeholder="Введите описание"> <br>
         </div>
         <button class="ui teal basic button" type="submit">Добавить</button>
     </form>
@@ -17,19 +18,19 @@
 {% for todo in todos %}
 <div class="ui segment">
     <p class="ui big header">{{ todo.id }} {{ todo.title }}</p>
-
-    {% if todo.is_completed is False %}
-        <span class="ui grey label">Не завершено</span>
-        <a class="ui primary basic button" href="{% url 'update' pk=todo.id %}">Закрыть</a>
-    {% else %}
-        <span class="ui green label">Завершено</span>
-        <a class="ui blue button" href="{% url 'update' pk=todo.id %}">Открыть</a>
+    {% if todo.description %}
+        <p>{{ todo.description }}</p>
     {% endif %}
-    <a class="ui negative basic button" href="{% url 'delete' pk=todo.id %}">Удалить</a>
+    <a href="{% url 'update_todo' pk=todo.id %}" class="ui primary basic button">Изменить задание</a><br><br>
+    {% if todo.is_completed is False %}
+        <a class="ui negative basic button" href="{% url 'update' pk=todo.id %}">Не завершено</a>
+    {% else %}
+        <a class="ui green basic button" href="{% url 'update' pk=todo.id %}">Завершено</a>
+    {% endif %}
+    <a class="ui red button" href="{% url 'delete' pk=todo.id %}">Удалить</a>
 
 </div>
 {% endfor %}
 </div>
-
 
 {% endblock content %}
